<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.basicelectronicsquiz.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Q1"
                    style="@style/questionNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/q1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:id="@+id/ohm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="16dp"
                        android:src="@drawable/ohm" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/Q1T" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/q1A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q1A" />

                    <RadioButton
                        android:id="@+id/q1B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q1B" />

                    <RadioButton
                        android:id="@+id/q1C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="C - A Lucky Charm" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/Black"></LinearLayout>

            <TextView
                android:id="@+id/Q2"
                style="@style/questionNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/q2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/resistor"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:paddingRight="16dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/resistor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:fontFamily="serif"
                    android:text="@string/Q2T" />
            </LinearLayout>

            <EditText
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Answer"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/Q3"
                style="@style/questionNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/q3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/ohmsLaw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="75dp"
                    android:maxWidth="75dp"
                    android:paddingRight="16dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ohmslaw" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="cursive"
                    android:text="V = _ X _"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <CheckBox
                    android:id="@+id/q3A"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:text="R"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <CheckBox
                    android:id="@+id/q3B"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:text="I"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <CheckBox
                    android:id="@+id/q3C"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:text="B"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/Black">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/amp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:maxHeight="50dp"
                    android:maxWidth="50dp"
                    android:paddingRight="16dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/amp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="serif"
                    android:text="@string/Q4T" />
            </LinearLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q4A"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="True" />

                <RadioButton
                    android:id="@+id/q4B"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="False" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/Black"></LinearLayout>

            <TextView
                android:id="@+id/scoreSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="Good Luck!"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:textStyle="bold"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:onClick="submitScore"
                android:text="Submit Answers"
                android:textColor="@color/Black" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
